--- a/e_commerce/views/admin/upload.hbs
+++ b/e_commerce/views/admin/upload.hbs
@@ -13,6 +13,14 @@
             <input type="file" name="file" accept="image/png, image/gif, image/jpeg" required />
         </div>
 
+        <div>
+            <input type="text" name="price" placeholder="Enter price" required />
+        </div>
+
+        <div>
+            <input type="text" name="sale_price" placeholder="Enter sale price" required />
+        </div>
+
         <button type="submit" class="btn">Sign In</button>
     </form>
 
