--- a/e_commerce/views/partials/navbar.hbs
+++ b/e_commerce/views/partials/navbar.hbs
@@ -15,7 +15,8 @@
             </div>
 
             <div class="icons">
-                <a href="#" class="icon">
+            
+                <a href="/login" class="icon">
                     <i class="fas fa-user"></i>
                 </a>
                 <div class="icon">
