--- a/e_commerce/public/css/style.css
+++ b/e_commerce/public/css/style.css
@@ -395,7 +395,7 @@ header{
     display: flex;
     position: relative;
     width: 350px;
-    height: 350px;
+    height: 400px;
     box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05),
         25px 35px 20px rgba(0, 0, 0, 0.05),
         25px 30px 30px rgba(0, 0, 0, 0.05),
@@ -429,7 +429,9 @@ header{
 }
 
 
-.container .drop .content a {
+.container .drop .content form input {
+    cursor: pointer;
+    border: none;
     background: var(--clr);
     text-decoration: none;
     position: relative;
