--- a/e_commerce/views/partials/navbar.hbs
+++ b/e_commerce/views/partials/navbar.hbs
@@ -23,7 +23,7 @@
                     <i class="fas fa-heart"><sup>0</sup></i>
                 </div>
                 <div class="icon cart">
-                    <i class="fas fa-cart-shopping"><sup>0</sup></i>
+                    <i class="fas fa-cart-shopping"><sup>{{count}}</sup></i>
                 </div>
             </div>
         </div>
