small changes in admin portal

--- a/e_commerce/views/admin/editDelete.hbs
+++ b/e_commerce/views/admin/editDelete.hbs
@@ -31,7 +31,7 @@
 
 <body>
 
-    {{>navbar}}
+    {{>adminnavbar}}
 
     <div style="display: flex; justify-content: center; margin-top:8%">
         <a href="/admin/upload" class="btn btn-primary">Add More Items</a>
